Fix a typo in the atomic weight label

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span id="element-symbol"></span>
                 <span id="element-name"></span>
                 <span>Atomic number: <span id="atomic-number"></span></span>
-                <span>Atmoic weight: <span id="atomic-weight"></span></span>
+                <span>Atomic weight: <span id="atomic-weight"></span></span>
             </div>
         </div>
     </div>
