Autosize the properties tile Since we already have a method to dynamically center the properties tile in its parent, just autosize it and position it before showing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wijmo 5 Periodic Sunburst</title>
     <!-- Core Wijmo references (required) -->
     <script src="vendor/wijmo5/js/wijmo.min.js"></script>
