Use classes for styling instead of ids

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         <!-- The main properties container - has individual info panes for each type of info view -->
         <div id="properties-tile" class="properties-tile">
             <div id="group-info">
-                <span id="group-name"></span>
+                <span id="group-name" class="group-name"></span>
                 <span class="subgroups-title">Subgroups</span>
                 <span id="subgroup-listing"></span>
             </div>
             <div id="subGroup-info">
-                <span id="subGroup-name"></span>
-                <span class="element-number-overview">No. of elements: <span id="num-elements"></span></span>
+                <span id="subGroup-name" class="subGroup-name"></span>
+                <span class="element-number-overview">No. of elements: <span id="num-elements" class="num-elements"></span></span>
                 <span class="characteristics-title">Characteristics</span>
                 <span id="characteristic-listing"></span>
             </div>
             <div id="element-info">
-                <span id="element-symbol"></span>
-                <span id="element-name"></span>
+                <span id="element-symbol" class="element-symbol"></span>
+                <span id="element-name" class="element-name"></span>
                 <span>Atomic number: <span id="atomic-number"></span></span>
                 <span>Atomic weight: <span id="atomic-weight"></span></span>
             </div>
