--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="group-info">
                 <span id="group-name" class="group-name"></span>
                 <span class="subgroups-title">Subgroups</span>
-                <span id="subgroup-listing"></span>
+                <span id="subGroup-listing"></span>
             </div>
             <div id="subGroup-info">
                 <span id="subGroup-name" class="subGroup-name"></span>
