Add a link to the blog post

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <p>
                 Harness the power of Wijmo's Sunburst control to create a clearer organization of periodic table elements.
             </p>
+            <p>
+                See how we did it <a href="http://wijmo.com/blog/rethinking-periodic-table-wijmo-sunburst/">the 'how to' blog post</a>.
+            </p>
         </div>
     </div>
     <!-- The main container where the Sunburst control is rendered -->
