--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Primary bootstrap import -->
     <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <!-- Load our own custom CSS last -->
-    <link href="assets/css/style-main.min.css" rel="stylesheet">
+    <link href="dist/css/style-main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/bundle.min.js"></script>
+    <script src="dist/js/app.js"></script>
 </body>
 
 </html>
