--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <!-- Note the modified initial-scale. This makes things work smoothly on mobile by forcing the initial render to be 'zoomed out' -->
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>Wijmo 5 Periodic Sunburst</title>
-    <!-- Core Wijmo references (required) -->
-    <script src="vendor/wijmo5/js/wijmo.min.js"></script>
-    <link href="vendor/wijmo5/css/wijmo.min.css" rel="stylesheet">
+    <!-- Core Wijmo references from CDN (required) -->
+    <script src="http://cdn.wijmo.com/5.latest/controls/wijmo.min.js"></script>
+    <link href="http://cdn.wijmo.com/5.latest/styles/wijmo.min.css" rel="stylesheet">
     <!-- Wijmo core chart control and hierarchical chart controls -->
-    <script src="vendor/wijmo5/js/wijmo.chart.min.js"></script>
-    <script src="vendor/wijmo5/js/wijmo.chart.hierarchical.min.js"></script>
-    <!-- Wijmo custom theme (optional, include the theme you like) -->
-    <link href="vendor/wijmo5/css/wijmo.theme.modern.min.css" rel="stylesheet">
+    <script src="http://cdn.wijmo.com/5.latest/controls/wijmo.chart.min.js"></script>
+    <script src="http://cdn.wijmo.com/5.latest/controls/wijmo.chart.hierarchical.min.js"></script>
     <!-- Primary bootstrap import -->
     <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <!-- Load our own custom CSS last -->
