--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 Harness the power of Wijmo's Sunburst control to create a clearer organization of periodic table elements.
             </p>
             <p>
-                See how we did it <a href="http://wijmo.com/blog/rethinking-periodic-table-wijmo-sunburst/">the 'how to' blog post</a>.
+                See how we did it in <a href="http://wijmo.com/blog/rethinking-periodic-table-wijmo-sunburst/">the 'how to' blog post</a>.
             </p>
         </div>
     </div>
