Slight documentation addition on index.html, move app.js loading
Just a reminder about the CDN! This also slides the loading of the production JavaScript to the <head> of the page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <!-- Core Wijmo references from CDN (required) -->
     <script src="http://cdn.wijmo.com/5.latest/controls/wijmo.min.js"></script>
     <link href="http://cdn.wijmo.com/5.latest/styles/wijmo.min.css" rel="stylesheet">
-    <!-- Wijmo core chart control and hierarchical chart controls -->
+    <!-- Wijmo core chart control and hierarchical chart controls (also from CDN) -->
     <script src="http://cdn.wijmo.com/5.latest/controls/wijmo.chart.min.js"></script>
     <script src="http://cdn.wijmo.com/5.latest/controls/wijmo.chart.hierarchical.min.js"></script>
     <!-- Primary bootstrap import -->
     <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <!-- Load our own custom CSS last -->
     <link href="dist/css/style-main.css" rel="stylesheet">
+    <script src="dist/js/app.js"></script>
 </head>
 
 <body>
@@ -63,7 +64,6 @@
             </div>
         </div>
     </div>
-    <script src="dist/js/app.js"></script>
 </body>
 
 </html>
